<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/slider_back__"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white_overlay"
        card_view:cardCornerRadius="10dp"
        card_view:cardElevation="5dp"
        card_view:cardUseCompatPadding="true"
        android:layout_gravity="center"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_delivery"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Foodey.Delivery Boy"
                android:textColor="@color/header_bg"
                android:textSize="@dimen/text_20"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_margin="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/email"
                    android:contentDescription="@string/app_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin10"
                    android:layout_marginRight="@dimen/layout_margin10"
                    android:gravity="center">

                    <EditText
                        android:id="@+id/vE_al_email"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_20"
                        android:theme="@style/EditTextTheme" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/password"
                    android:contentDescription="@string/app_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin10"
                    android:layout_marginRight="@dimen/layout_margin10"
                    android:gravity="center"
                    android:textColorHint="@color/hint_color"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimary">

                    <EditText
                        android:id="@+id/vE_al_password"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:textColorHint="@color/hint_color"
                        android:textSize="@dimen/text_20"
                        android:theme="@style/EditTextTheme" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/red_all_corner_bend"
                android:layout_margin="20dp"
                android:text="Sign In"
                android:textStyle="bold"
                android:textSize="@dimen/text_18"
                android:textColor="@color/white"
                android:onClick="doLogin"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="New Delivery Boy Registration? Sign Up"
                android:gravity="center"
                android:layout_gravity="center"
                android:textSize="@dimen/text_17"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_margin="@dimen/layout_margin10"
                android:onClick="doSignUp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</LinearLayout>